--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ categories = ["command-line-utilities"]
 [dependencies]
 paho-mqtt = "0.12"
 time = "0.3.31"
-tokio = { version = "1", features = ["macros","sync","rt-multi-thread"] }
+tokio = { version = "1", features = ["full"] }
 awaitgroup = "0.7.0"
 clap = { version = "4", features = ["derive"] } # 命令行解析
