--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mqtt-benchmark"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2021"
 authors = ["chenquan <chenquan.dev@gmail.com>"]
 description = "A simple MQTT (broker) benchmarking tool."
@@ -12,8 +12,9 @@ categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-paho-mqtt = "0.12"
 time = "0.3.31"
 tokio = { version = "1", features = ["full"] }
 awaitgroup = "0.7.0"
 clap = { version = "4", features = ["derive"] } # 命令行解析
+rumqttc = "0.24.0"
+url = "2.5.0"
